<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/bSmall"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/brush_small" />
    <Button
        android:id="@+id/bMedium"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/bSmall"
        android:layout_alignRight="@id/bSmall"
        android:layout_below="@id/bSmall"
        android:text="@string/brush_medium" />
    <Button
        android:id="@+id/bLarge"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/bSmall"
        android:layout_alignRight="@id/bSmall"
        android:layout_below="@id/bMedium"
        android:text="@string/brush_large" />
</RelativeLayout>
